--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,10 @@
+/abstract_classes/
 /interfaces/
+/Animal.class
+/Cow.class
+/Pork.class
+/Dog.class
+/Farm.class
+/Turtle.class
+/funkifyText.class
+/BackwardsString.class
